- time: add HX_TIMESPEC_{EXP,FMT}
- time: add HX_TIMEVAL_{EXP,FMT}
Changes:
- io: remove HX_REALPATH_SYMLINK
- time: rename HX_diff_timespec to HX_timespec_sub (old ABI kept)
- time: rename HX_diff_timeval to HX_timeval_sub (old ABI kept)
- string: make HX_memmem consider the special case of search_length=0
- string: optimize search_length=1 case in HX_memmem
Enhancements:
- option: add HXTYPE_SIZE_T
- time: add a HX_timespec_add function


v3.12.1 (2011-12-15)
====================
Fixes:
- build: make build error-free when using -Wl,--no-undefined
- string: make HX_strdup(NULL) valid again


v3.12 (2010-12-03)
==================
Fixes:
- defs: resolve warning for users of const_cast*() when using -Wextra
- format: error handling for HXformat2_aprintf
- option: do not omit dashes when passthru'ing unknown two-part long opts
- option: do not omit arg following unknown unknown two-part long opts in pthru
- option: do run callback on HXTYPE_BOOL
- option: correct passthrough of squashed unknown short options
- option: do not stop early when printing help/usage
- option: avoid crash when passing an empty argv
- option: avoid crash when passing NULL for struct HXoptcb.arg0
Enhancements:
- build: deactivate type-checking of the *_cast() macros for clang due to a
  compiler bug involving nested structs-in-typeofs
- option: allow argc=NULL on HX_getopt
- option: error handling for HX_getopt
- option: support POSIXLY_CORRECT environment variable
- string: add a HX_strndup function
- string: add a HX_strnlen function
- mc: use an implicit minimum allocated length
Changes:
- format: renamed HXformat2_[afs]printf back to HXformat_[afs]printf
- io: add mode argument to HX_mkdir
- map: avoid 1<<31 in constants
- option: remove struct HXoptcb.arg0
- option: remove struct HXoptcb.match_{ln,sh} by .flags
- option: let HX_getopt return code indicate system failure states
- option: remove struct HXoption.sval (replaced by .uptr)