@@ -13,6 +13,7 @@ Changes:
 - time: rename HX_diff_timeval to HX_timeval_sub (old ABI kept)
 - string: make HX_memmem consider the special case of search_length=0
 - string: optimize search_length=1 case in HX_memmem
+- string: speed up HX_memmem searches for search_length >=2
 Enhancements:
 - option: add HXTYPE_SIZE_T
 - time: add a HX_timespec_add function
